# small-cap-screener

./: .replit  Pasted--UTC-Logs-for-small-cap-screener-streamlit-app--1732817356988.txt  Pasted-Benzinga-Pro-Es-una-de-las-fuentes-de-noticias-m-s-r-pidas-y-completas-para-traders-de-small-cap-1731870400718.txt  Pasted-This-error-indicates-that-your-deployed-Streamlit-app-on-Streamlit-Cloud-or-a-similar-environment-is-1732836571044.txt  azure.yaml  main.py  pyproject.toml  replit.nix  requirements.txt  stock_utils.py
.github/workflows/: azure-deploy.yml
.streamlit/: config.toml  secrets.toml
assets/: style.css
