[project]
name = "repl-nix-smallcapscreener"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "finviz",
    "lxml>=5.3.0",
    "numpy>=1.4.6",
    "pandas>=2.2.3",
    "plotly>=2.1.3",
    "pytz>=2024.2",
    "requests-html>=0.10.0",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
    "textblob>=0.18.0.post0",
    "yfinance>=0.2.49",
]
